--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
         <section id="visualization">
             <h2>Visualization Title</h2>
+            <!-- DATA CHART GOES HERE -->
             <div class="chart">Chart Placeholder</div>
         </section>
         <section id="details">
