--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
     </header>
     <main>
         <section id="visualization">
-            <h2>Visualization Title</h2>
-            <!-- DATA CHART GOES HERE -->
-            <div class="chart">Chart Placeholder</div>
+            <h2>Visualization Title <button id="swapViewButton">Swap View</button></h2>
+            <!-- CHART PLACEHOLDER -->
+            <div class="chart">CHART PLACEHOLDER</div>
         </section>
         <section id="details">
             <h2>Details and Insights</h2>
-            <p>DATA DETAILS PLACEHOLDER</p>
+            <p>Here you can add additional details or insights about the data presented above.</p>
         </section>
     </main>
     <footer>
         <p>© 2024 Data Visualization Website. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
