--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
   <nav class="navbar">
-    <a href="dashboard.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="login.html">Login</a>
     <a href="register.html">Register</a>
   </nav>
