added an about page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="index.html">Home</a>
     <a href="login.html">Login</a>
     <a href="register.html">Register</a>
+    <a href="about.html">About</a>
   </nav>
   <h1 class="curved-title">Data Visualization Dashboard</h1>
   <p>Welcome to our interactive data visualization platform.</p>
