--- a/login.html
+++ b/login.html
@@ -1,10 +1,10 @@
-<!-- register.html -->
+<!-- login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Login</title>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,20 +14,20 @@
         <a href="index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="register.html">Register</a>
+        <a href="profile.html">Profile</a>
+        <a href="about.html">About</a>
     </nav>
-    <h1 class="curved-title">Register</h1>
+    <h1 class="curved-title">Login</h1>
 </header>
 <main>
-    <form id="registerForm" action="/register" method="post">
+    <form id="loginForm" action="/login" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
-        <label for="confirm-password">Confirm Password:</label>
-        <input type="password" id="confirm-password" name="confirm-password" required>
-        <button type="submit">Register</button>
+        <button type="submit">Login</button>
     </form>
-    <p>Already have an account? <a href="login.html">Login here</a>.</p>
+    <p>Don't have an account? <a href="register.html">Register now</a>.</p>
 </main>
 </body>
 </html>
