--- a/register.html
+++ b/register.html
@@ -14,6 +14,8 @@
         <a href="index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="register.html">Register</a>
+        <a href="profile.html">Profile</a>
+        <a href="about.html">About</a>
     </nav>
     <h1 class="curved-title">Register</h1>
 </header>
