--- a/index.html
+++ b/index.html
@@ -22,6 +22,50 @@
 <main>
   <section id="visualization">
     <h2>Visualization Title <button id="swapViewButton">Swap View</button></h2>
+    <div class="box" id="tableView">
+        <table id="dataTable">
+            <tr>
+                <th>Title</th>
+                <th>Type</th>
+                <th>Director</th>
+                <th>Duration</th>
+                <th>Release year</th>
+              </tr>
+            <tr>
+                <td><span class="tooltip"><a href="#" class="clickable">Blood & Water</span></a></td>
+                <td><a href="#" class="clickable">TV Show</a></td>
+                <td><a href="#" class="clickable">Nosipho Dumisa</a></td>
+                <td><a href="#" class="clickable">2 Seasons</a></td>
+                <td><a href="#" class="clickable">2021</a></td>
+              </tr>
+              <tr>
+                <td><span class="tooltip"><a href="#" class="clickable">Midnight Mass</span></a></td>
+                <td><a href="#" class="clickable">TV Show</a></td>
+                <td><a href="#" class="clickable">Mike Flanagan</a></td>
+                <td><a href="#" class="clickable">1 Season</a></td>
+                <td><a href="#" class="clickable">2021</a></td>
+              </tr>
+              <tr>
+                <td><span class="tooltip"><a href="#" class="clickable">Avvai Shanmughi</span></a></td>
+                <td><a href="#" class="clickable">Movie</a></td>
+                <td><a href="#" class="clickable">K.S. Ravikumar</a></td>
+                <td><a href="#" class="clickable">161 Min</a></td>
+                <td><a href="#" class="clickable">1996</a></td>
+              </tr>
+              <tr>
+                <td><span class="tooltip"><a href="#" class="clickable">Tango With Me</span></a></td>
+                <td><a href="#" class="clickable">Movie</a></td>
+                <td><a href="#" class="clickable">Mahmood Ali-Balogun</a></td>
+                <td><a href="#" class="clickable">104 Min</a></td>
+                <td><a href="#" class="clickable">2010</a></td>
+              <tr>
+                <td><span class="tooltip"><a href="#" class="clickable">Last Chance U</span></a></td>
+                <td><a href="#" class="clickable">TV Show</a></td>
+                <td><a href="#" class="clickable">Greg Whiteley</a></td>
+                <td><a href="#" class="clickable">5 Seasons</a></td>
+                <td><a href="#" class="clickable">2020</a></td>
+              </tr>              
+        </table>
     <div class="chart">
       <div class="box">
         <canvas id="chartCanvas" width="400" height="400"></canvas>
